--- a/style.css
+++ b/style.css
@@ -73,8 +73,7 @@ main {
 
 .movie img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-bottom: 2px solid #e50914;
 }
 
